--- a/src/stingray.css
+++ b/src/stingray.css
@@ -5,7 +5,7 @@ body html{
     font-family: 'Oxanium', cursive;
 }
 
-#prt1{
+#prt1-stingray{
     width: 100vw;
     height: 100vh;
     background-image: url('https://images.pexels.com/photos/3311574/pexels-photo-3311574.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
