--- a/src/products.css
+++ b/src/products.css
@@ -161,5 +161,23 @@ body, html{
     }
 
     @media only screen and (max-width: 800px){
-        
-    }
+        .parent {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(12, 1fr);
+          }
+
+
+          .div1 { grid-area: 1 / 1 / 2 / 2; }
+          .div2 { grid-area: 2 / 1 / 3 / 2; }
+          .div3 { grid-area: 3 / 1 / 4 / 2; }
+          .div4 { grid-area: 4 / 1 / 5 / 2; }
+          .div5 { grid-area: 5 / 1 / 6 / 2; }
+          .div6 { grid-area: 6 / 1 / 7 / 2; }
+          .div7 { grid-area: 7 / 1 / 8 / 2; }
+          .div8 { grid-area: 8 / 1 / 9 / 2; }
+          .div9 { grid-area: 9 / 1 / 10 / 2; }
+          .div10 { grid-area: 10 / 1 / 11 / 2; }
+          .div11 { grid-area: 11 / 1 / 12 / 2; }
+          .div12 { grid-area: 12 / 1 / 13 / 2; }
+        }
